WIP: updating to 1.21.4