@@ -11,29 +11,29 @@ import io.github.darkkronicle.advancedchatcore.config.ConfigStorage;
 import io.github.darkkronicle.advancedchatcore.interfaces.IChatMessageProcessor;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.Getter;
 import lombok.Setter;
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
 
 /** A utility class to maintain the storage of the chat. */
+@Getter
 @Environment(EnvType.CLIENT)
 public class ChatHistory {
 
     private static final ChatHistory INSTANCE = new ChatHistory();
 
     /** Stored lines */
-    @Getter private final List<ChatMessage> messages = new ArrayList<>();
+    private final List<ChatMessage> messages = new ArrayList<>();
 
     /** Maximum lines for storage */
-    @Getter @Setter private int maxLines = 500;
+    @Setter private int maxLines = 500;
 
     /** Runnable's to run when chat history is cleared */
-    @Getter private final List<Runnable> onClear = new ArrayList<>();
+    private final List<Runnable> onClear = new ArrayList<>();
 
     /** {@link IChatMessageProcessor} for when history is updated. */
-    @Getter private final List<IChatMessageProcessor> onUpdate = new ArrayList<>();
+    private final List<IChatMessageProcessor> onUpdate = new ArrayList<>();
 
     public static ChatHistory getInstance() {
         return INSTANCE;
@@ -117,7 +117,7 @@ public class ChatHistory {
         List<ChatMessage> toRemove =
                 this.messages.stream()
                         .filter(line -> line.getId() == messageId)
-                        .collect(Collectors.toList());
+                        .toList();
         this.messages.removeAll(toRemove);
         for (ChatMessage m : toRemove) {
             sendUpdate(m, IChatMessageProcessor.UpdateType.REMOVE);
